@@ -15,7 +15,9 @@ apt (0.9.7.5) UNRELEASED; urgency=low
   * doc/apt_preferences.5.xml:
     - use the correct interval (x <= P < y) for pin value documentation as
       these are the intervals used by the code (Closes: #685989)
-  * 
+  * apt-pkg/indexcopy.cc:
+    - do not create duplicated flat-archive cdrom sources for foreign
+      architectures on multi-arch cdroms
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 26 Aug 2012 10:49:17 +0200
 
